--- a/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -13,23 +13,23 @@
     </div>
 
     <!-- Layout builder -->
-    <div class="menu-item">
+    <!-- <div class="menu-item">
       <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
         <span class="menu-icon">
           <app-keenicon name="switch" class="fs-2"></app-keenicon>
         </span>
         <span class="menu-title">Layout Builder</span>
       </a>
-    </div>
+    </div> -->
     <!-- Separator -->
     <div class="menu-item">
       <div class="menu-content pt-8 pb-2">
-        <span class="menu-section text-muted text-uppercase fs-8 ls-1">Crafted</span>
+        <span class="menu-section text-muted text-uppercase fs-8 ls-1">ADMINISTRADOR</span>
       </div>
     </div>
 
     <!-- Pages -->
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="element-plus" class="fs-2"></app-keenicon>
@@ -139,7 +139,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Accounts -->
     <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
@@ -148,38 +148,73 @@
           <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
         </span>
         <span class="menu-title"
-              data-link="/crafted/account">Accounts
+              data-link="/users/list">Usuarios
         </span>
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/crafted/account/overview">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/users/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
             <span
-              class="menu-title">Overview
+              class="menu-title">Listar usuarios
             </span>
           </a>
         </div>
+        <!-- <div class="menu-item">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
+            <span
+              class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span
+              class="menu-title">Roles
+            </span>
+          </a>
+        </div> -->
+      </div>
+    </div>
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+      <span class="menu-link">
+        <span class="menu-icon">
+          <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title"
+              data-link="/roles/list">Roles
+        </span>
+        <span class="menu-arrow"></span>
+      </span>
+      <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/crafted/account/settings">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
             <span
-              class="menu-title">Settings
+              class="menu-title">Listar roles
             </span>
           </a>
         </div>
+        <!-- <div class="menu-item">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
+            <span
+              class="menu-bullet">
+              <span class="bullet bullet-dot"></span>
+            </span>
+            <span
+              class="menu-title">Roles
+            </span>
+          </a>
+        </div> -->
       </div>
     </div>
 
     <!-- Errors -->
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="phone" class="fs-2"></app-keenicon>
@@ -213,10 +248,10 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Widgets -->
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="element-7" class="fs-2"></app-keenicon>
@@ -294,17 +329,17 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Separator -->
-    <div class="menu-item">
+    <!-- <div class="menu-item">
       <div class="menu-content pt-8 pb-2">
         <span class="menu-section text-muted text-uppercase fs-8 ls-1">Apps</span>
       </div>
-    </div>
+    </div> -->
 
     <!-- Chat -->
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="message-text-2" class="fs-2"></app-keenicon>
@@ -346,10 +381,10 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Customers -->
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="profile-user" class="fs-2"></app-keenicon>
@@ -390,7 +425,7 @@
           </a>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <!--end::Menu-->
 </div>
