--- a/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -11,23 +11,12 @@
         <span class="menu-title" translate="MENU.DASHBOARD"></span>
       </a>
     </div>
-
-    <!-- Layout builder -->
-    <!-- <div class="menu-item">
-      <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
-        <span class="menu-icon">
-          <app-keenicon name="switch" class="fs-2"></app-keenicon>
-        </span>
-        <span class="menu-title">Layout Builder</span>
-      </a>
-    </div> -->
     <!-- Separator -->
     <div class="menu-item">
       <div class="menu-content pt-8 pb-2">
         <span class="menu-section text-muted text-uppercase fs-8 ls-1">ADMINISTRADOR</span>
       </div>
     </div>
-
     <!-- Pages -->
     <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
@@ -141,14 +130,14 @@
       </div>
     </div> -->
 
-    <!-- Accounts -->
+    <!-- Configuracion de usuarios -->
     <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
-          <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
+          <app-keenicon name="profile-user" class="fs-2"></app-keenicon>
         </span>
         <span class="menu-title"
-              data-link="/users/list">Usuarios
+              data-link="/users/list">Gestión de usuarios
         </span>
         <span class="menu-arrow"></span>
       </span>
@@ -160,34 +149,10 @@
               <span class="bullet bullet-dot"></span>
             </span>
             <span
-              class="menu-title">Listar usuarios
+              class="menu-title">Usuarios
             </span>
           </a>
         </div>
-        <!-- <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
-            <span
-              class="menu-bullet">
-              <span class="bullet bullet-dot"></span>
-            </span>
-            <span
-              class="menu-title">Roles
-            </span>
-          </a>
-        </div> -->
-      </div>
-    </div>
-    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
-      <span class="menu-link">
-        <span class="menu-icon">
-          <app-keenicon name="profile-circle" class="fs-2"></app-keenicon>
-        </span>
-        <span class="menu-title"
-              data-link="/roles/list">Roles
-        </span>
-        <span class="menu-arrow"></span>
-      </span>
-      <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div class="menu-item">
           <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
             <span
@@ -195,26 +160,34 @@
               <span class="bullet bullet-dot"></span>
             </span>
             <span
-              class="menu-title">Listar roles
+              class="menu-title">Roles
             </span>
           </a>
         </div>
-        <!-- <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/roles/list">
+        <div class="menu-item">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/permissions/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
             </span>
             <span
-              class="menu-title">Roles
+              class="menu-title">Permisos
             </span>
           </a>
-        </div> -->
+        </div>
       </div>
     </div>
-
+    <!-- Configuracion de Layout -->
+    <div class="menu-item">
+      <a class="menu-link without-sub" routerLink="/builder" routerLinkActive="active">
+        <span class="menu-icon">
+          <app-keenicon name="switch" class="fs-2"></app-keenicon>
+        </span>
+        <span class="menu-title">Config Layout</span>
+      </a>
+    </div>
     <!-- Errors -->
-    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="phone" class="fs-2"></app-keenicon>
@@ -248,10 +221,10 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Widgets -->
-    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="element-7" class="fs-2"></app-keenicon>
@@ -329,17 +302,17 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Separator -->
-    <!-- <div class="menu-item">
+    <div class="menu-item">
       <div class="menu-content pt-8 pb-2">
         <span class="menu-section text-muted text-uppercase fs-8 ls-1">Apps</span>
       </div>
-    </div> -->
+    </div>
 
     <!-- Chat -->
-    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="message-text-2" class="fs-2"></app-keenicon>
@@ -381,10 +354,10 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- Customers -->
-    <!-- <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
+    <div class="menu-item menu-accordion" data-kt-menu-trigger="click" routerLinkActive="here show">
       <span class="menu-link">
         <span class="menu-icon">
           <app-keenicon name="profile-user" class="fs-2"></app-keenicon>
@@ -425,7 +398,7 @@
           </a>
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
   <!--end::Menu-->
 </div>
