--- a/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/mercados/admin/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -165,7 +165,7 @@
           </a>
         </div>
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/permissions/list">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/permisos/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
