--- a/mercados/admin/src/app/modules/role/components/role-list/role-list.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-list/role-list.component.html
@@ -1,1 +1,72 @@
-<p>role-list works!</p>
+<div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-5 g-xl-9">
+    <!--begin::Col-->
+    <div class="col-md-4">
+        <!--begin::Card-->
+        <div class="card card-flush h-md-100">
+            <!--begin::Card header-->
+            <div class="card-header">
+                <!--begin::Card title-->
+                <div class="card-title">
+                    <h2>Administrador</h2>
+                </div>
+                <!--end::Card title-->
+            </div>
+            <!--end::Card header-->
+            <!--begin::Card body-->
+            <div class="card-body pt-1">
+                <!--begin::Users-->
+                <div class="fw-bolder text-gray-600 mb-5">Total de usuario con este rol: 5</div>
+                <!--end::Users-->
+                <!--begin::Permissions-->
+                <div class="d-flex flex-column text-gray-600">
+                    <div class="d-flex align-items-center py-2">
+                    <span class="bullet bg-primary me-3"></span>Todos los Controles Administrativos</div>
+                    <div class="d-flex align-items-center py-2">
+                    <span class="bullet bg-primary me-3"></span>Ver y Editar Resúmenes Financieros</div>
+                    <div class="d-flex align-items-center py-2">
+                    <span class="bullet bg-primary me-3"></span>Informes Masivos Activados</div>
+                    <div class="d-flex align-items-center py-2">
+                    <span class="bullet bg-primary me-3"></span>Ver y Editar Pagos</div>
+                    <div class="d-flex align-items-center py-2">
+                    <span class="bullet bg-primary me-3"></span>Ver y Editar Litigios</div>
+                    <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>
+                        <em>y 7 más...</em>
+                    </div>
+                </div>
+                <!--end::Permissions-->
+            </div>
+            <!--end::Card body-->
+            <!--begin::Card footer-->
+            <div class="card-footer flex-wrap pt-0">
+                <a href="../../demo1/dist/apps/user-management/roles/view.html" class="btn btn-light btn-active-primary my-1 me-2">Ver Rol</a>
+                <button type="button" class="btn btn-light btn-active-light-primary my-1" data-bs-toggle="modal" data-bs-target="#kt_modal_update_role">Editar Rol</button>
+            </div>
+            <!--end::Card footer-->
+        </div>
+        <!--end::Card-->
+    </div>
+
+    <!--begin::Add new card-->
+    <div class="ol-md-4">
+        <!--begin::Card-->
+        <div class="card h-md-100">
+            <!--begin::Card body-->
+            <div class="card-body d-flex flex-center">
+                <!--begin::Button-->
+                <button type="button" class="btn btn-clear d-flex flex-column flex-center" (click)="openModalCreateRole()">
+                    <!--begin::Illustration-->
+                    <img src="assets/media/illustrations/sketchy-1/4.png" alt="" class="mw-100 mh-150px mb-7">
+                    <!--end::Illustration-->
+                    <!--begin::Label-->
+                    <div class="fw-bolder fs-3 text-gray-600 text-hover-primary">Añadir Nuevo Rol</div>
+                    <!--end::Label-->
+                </button>
+                <!--begin::Button-->
+            </div>
+            <!--begin::Card body-->
+        </div>
+        <!--begin::Card-->
+    </div>
+    <!--begin::Add new card-->
+</div>
