--- a/mercados/admin/src/app/modules/permiso/components/permiso-list/permiso-list.component.html
+++ b/mercados/admin/src/app/modules/permiso/components/permiso-list/permiso-list.component.html
@@ -1,48 +1,78 @@
-<h1>hola mundo</h1>
-<div
-    class="card text-white bg-primary"
->
-    <img class="card-img-top" src="holder.js/100px180/" alt="Title" />
-    <div class="card-body">
-        <h4 class="card-title">Title</h4>
-        <p class="card-text">Text</p>
+<div class="card card-flush">
+  <div class="card-header mt-6">
+    <div class="card-title">
+      <div class="d-flex align-items-center position-relative my-1">
+        <app-keenicon
+          name="magnifier"
+          class="fs-3 position-absolute ms-5"
+        ></app-keenicon>
+        <input
+          type="text"
+          data-action="filter"
+          class="form-control form-control-solid w-250px ps-12"
+          placeholder="Search Permiso"
+        />
+      </div>
     </div>
-</div>
-
-<div
-    class="table-responsive"
->
-    <table
-        class="table table-striped table-hover table-borderless table-primary align-middle"
+    <div class="card-toolbar">
+      <button (click)="openModalCreatePermiso()" type="button" class="btn btn-primary">Agregar Permiso</button>
+    </div>
+  </div>
+  <div class="card-body pt-0">
+    <div
+      id="kt_permissions_table_wrapper"
+      class="dataTables_wrapper dt-bootstrap4 no-footer"
     >
-        <thead class="table-light">
-            <caption>
-                Table Name
-            </caption>
+      <div class="table-responsive">
+        <table
+          class="table align-middle table-row-dashed fs-6 gy-5 mb-0 dataTable no-footer"
+          id="kt_permissions_table"
+        >
+          <thead>
+            <tr
+              class="text-start text-gray-400 fw-bolder fs-7 text-uppercase gs-0"
+            >
+              <th class="col">Name</th>
+              <th class="col">Name</th>
+              <th class="col">Name</th>
+              <th class="col">Name</th>
+            </tr>
+          </thead>
+          <tbody class="fw-bold text-gray-600">
             <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
-                <th>Column 3</th>
+              <td>User Management</td>
+              <td>
+                <a
+                  onclick="return false;"
+                  class="badge badge-light-primary fs-7 m-1"
+                  >Administrator</a
+                >
+              </td>
+              <td>20 Dec 2022, 11:30 am</td>
+              <td class="text-end">
+                <button
+                  class="btn btn-icon btn-active-light-primary w-30px h-30px me-3"
+                >
+                  <i class="ki-duotone ki-pencil fs-3"
+                    ><span class="path1"></span><span class="path2"></span
+                  ></i>
+                </button>
+                <button
+                  class="btn btn-icon btn-active-light-primary w-30px h-30px"
+                >
+                  <i class="ki-duotone ki-trash fs-3">
+                    <span class="path1"></span><span class="path2"></span>
+                    <span class="path3"></span><span class="path4"></span
+                    ><span class="path5"></span>
+                  </i>
+                </button>
+              </td>
             </tr>
-        </thead>
-        <tbody class="table-group-divider">
-            <tr
-                class="table-primary"
-            >
-                <td scope="row">Item</td>
-                <td>Item</td>
-                <td>Item</td>
-            </tr>
-            <tr
-                class="table-primary"
-            >
-                <td scope="row">Item</td>
-                <td>Item</td>
-                <td>Item</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            
-        </tfoot>
-    </table>
+          </tbody>
+        </table>
+      </div>
+      <!-- <div class="row">
+        <div class="col-sm-12 col-md-5 d-flex align-items-center justify-content-center justify-content-md-start"><div class="dataTables_length" id="kt_permissions_table_length"><label><select name="kt_permissions_table_length" aria-controls="kt_permissions_table" class="form-select form-select-sm form-select-solid"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select></label></div></div><div class="col-sm-12 col-md-7 d-flex align-items-center justify-content-center justify-content-md-end"><div class="dataTables_paginate paging_simple_numbers" id="kt_permissions_table_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="kt_permissions_table_previous"><a href="#" aria-controls="kt_permissions_table" data-dt-idx="0" tabindex="0" class="page-link"><i class="previous"></i></a></li><li class="paginate_button page-item active"><a href="#" aria-controls="kt_permissions_table" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item next disabled" id="kt_permissions_table_next"><a href="#" aria-controls="kt_permissions_table" data-dt-idx="2" tabindex="0" class="page-link"><i class="next"></i></a></li></ul></div></div></div> -->
+    </div>
+  </div>
 </div>
