--- a/mercados/admin/src/app/modules/permiso/components/permiso-add/permiso-add.component.html
+++ b/mercados/admin/src/app/modules/permiso/components/permiso-add/permiso-add.component.html
@@ -1,3 +1,10 @@
+<span *ngIf="" class="indicator-progress">
+  Please wait...
+  <span
+    class="spinner-border spinner-border-sm align-middle ms-2"
+  ></span
+></span>
+
 <div class="modal-content">
     <div class="modal-header">
       <h4 id="modal-basic-title" class="modal-title">Agregar Permiso</h4>
@@ -15,6 +22,16 @@
               class="form-control form-control-solid ng-untouched ng-pristine ng-invalid"
             />
           </div>
+          <div class="fv-row mb-2">
+            <label class="required fw-semibold fs-6 mb-2">Descripción</label>
+            <input
+              type="text"
+              name="description"
+              [(ngModel)] = "description"
+              placeholder="Esta permiso se ah..."
+              class="form-control form-control-solid ng-untouched ng-pristine ng-invalid"
+            />
+          </div>
       </div>
     </div>
     <div class="modal-footer flex-center">
@@ -28,15 +45,10 @@
       <button
         type="submit"
         class="btn btn-primary"
+        (click)="save()"
       >
         <span class="indicator-label"> Guardar </span
         >
-        <span class="indicator-progress">
-          Please wait...
-          <span
-            class="spinner-border spinner-border-sm align-middle ms-2"
-          ></span
-        ></span>
       </button>
     </div>
 </div>
