--- a/mercados/admin/src/app/modules/permiso/components/permiso-edit/permiso-edit.component.html
+++ b/mercados/admin/src/app/modules/permiso/components/permiso-edit/permiso-edit.component.html
@@ -1,1 +1,77 @@
-<p>permiso-edit works!</p>
+<span *ngIf="" class="indicator-progress">
+  Please wait...
+  <span class="spinner-border spinner-border-sm align-middle ms-2"></span
+></span>
+
+<div class="modal-content">
+  <div class="modal-header">
+    <h4 id="modal-basic-title" class="modal-title">
+      Editar Permiso: #{{ permiso.id }}
+    </h4>
+    <button type="button" (click)="modal.close()" class="btn-close"></button>
+  </div>
+  <div class="modal-body">
+    <div class="d-flex flex-column scroll-y me-n7 pe-7">
+      <div class="fv-row mb-2">
+        <label class="required fw-semibold fs-6 mb-2">Nombre</label>
+        <input
+          type="text"
+          name="name"
+          [(ngModel)]="name"
+          placeholder="Configuración de page ..."
+          class="form-control form-control-solid ng-untouched ng-pristine ng-invalid"
+        />
+      </div>
+      <div class="fv-row mb-2">
+        <label class="required fw-semibold fs-6 mb-2">Descripción</label>
+        <input
+          type="text"
+          name="description"
+          [(ngModel)]="description"
+          placeholder="Esta permiso se ah..."
+          class="form-control form-control-solid ng-untouched ng-pristine ng-invalid"
+        />
+      </div>
+      <div class="fv-row mb-2">
+        <label class="required fw-semibold fs-6 mb-2">Estado</label>
+        <div class="d-flex">
+          <div
+            class="form-check form-switch form-check-custom form-check-solid me-10"
+          >
+            <input
+              [(ngModel)]="state"
+              name="state"
+              (click)="changeState(newState)"
+              class="form-check-input h-30px w-50px cursor-pointer"
+              name="org_read"
+              type="checkbox"
+              value=""
+              id="org_read"
+              checked="checked"
+            />
+            <label
+              *ngIf="newState == 1"
+              class="form-check-label text-success"
+              for="org_read"
+              >Habilitado</label
+            >
+            <label
+              *ngIf="newState == 2"
+              class="form-check-label text-danger"
+              for="org_read"
+              >Desabilitado</label
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer flex-center">
+    <button type="reset" class="btn btn-light me-3" (click)="modal.close()">
+      Cerrar
+    </button>
+    <button type="submit" class="btn btn-primary" (click)="save()">
+      <span class="indicator-label"> Guardar Cambios</span>
+    </button>
+  </div>
+</div>
