--- a/mercados/admin/src/app/modules/role/components/role-list/role-list.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-list/role-list.component.html
@@ -1,51 +1,59 @@
+<span *ngIf="isLoading | async" class="indicator-progress">
+    Please wait...
+    <span
+      class="spinner-border spinner-border-sm align-middle ms-2"
+    ></span
+  ></span>
 <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-5 g-xl-9">
     <!--begin::Col-->
-    <div class="col-md-4">
-        <!--begin::Card-->
-        <div class="card card-flush h-md-100">
-            <!--begin::Card header-->
-            <div class="card-header">
-                <!--begin::Card title-->
-                <div class="card-title">
-                    <h2>Administrador</h2>
-                </div>
-                <!--end::Card title-->
-            </div>
-            <!--end::Card header-->
-            <!--begin::Card body-->
-            <div class="card-body pt-1">
-                <!--begin::Users-->
-                <div class="fw-bolder text-gray-600 mb-5">Total de usuario con este rol: 5</div>
-                <!--end::Users-->
-                <!--begin::Permissions-->
-                <div class="d-flex flex-column text-gray-600">
-                    <div class="d-flex align-items-center py-2">
-                    <span class="bullet bg-primary me-3"></span>Todos los Controles Administrativos</div>
-                    <div class="d-flex align-items-center py-2">
-                    <span class="bullet bg-primary me-3"></span>Ver y Editar Resúmenes Financieros</div>
-                    <div class="d-flex align-items-center py-2">
-                    <span class="bullet bg-primary me-3"></span>Informes Masivos Activados</div>
-                    <div class="d-flex align-items-center py-2">
-                    <span class="bullet bg-primary me-3"></span>Ver y Editar Pagos</div>
-                    <div class="d-flex align-items-center py-2">
-                    <span class="bullet bg-primary me-3"></span>Ver y Editar Litigios</div>
-                    <div class="d-flex align-items-center py-2">
-                        <span class="bullet bg-primary me-3"></span>
-                        <em>y 7 más...</em>
+    <ng-container *ngFor="let ROLE of ROLES">
+        <div class="col-md-4">
+            <!--begin::Card-->
+            <div class="card card-flush h-md-100">
+                <!--begin::Card header-->
+                <div class="card-header">
+                    <!--begin::Card title-->
+                    <div class="card-title">
+                        <h2>{{ROLE.name}}</h2>
                     </div>
+                    <!--end::Card title-->
                 </div>
-                <!--end::Permissions-->
+                <!--end::Card header-->
+                <!--begin::Card body-->
+                <div class="card-body pt-1">
+                    <!--begin::Users-->
+                    <div class="fw-bolder text-gray-600 mb-5">Total de usuario con este rol: 5</div>
+                    <!--end::Users-->
+                    <!--begin::Permissions-->
+                    <div class="d-flex flex-column text-gray-600">
+                        <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>Todos los Controles Administrativos</div>
+                        <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>Ver y Editar Resúmenes Financieros</div>
+                        <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>Informes Masivos Activados</div>
+                        <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>Ver y Editar Pagos</div>
+                        <div class="d-flex align-items-center py-2">
+                        <span class="bullet bg-primary me-3"></span>Ver y Editar Litigios</div>
+                        <div class="d-flex align-items-center py-2">
+                            <span class="bullet bg-primary me-3"></span>
+                            <em>y 7 más...</em>
+                        </div>
+                    </div>
+                    <!--end::Permissions-->
+                </div>
+                <!--end::Card body-->
+                <!--begin::Card footer-->
+                <div class="card-footer flex-wrap pt-0">
+                    <a href="../../demo1/dist/apps/user-management/roles/view.html" class="btn btn-light btn-active-primary my-1 me-2">Ver Rol</a>
+                    <button type="button" class="btn btn-light btn-active-light-primary my-1" data-bs-toggle="modal" data-bs-target="#kt_modal_update_role">Editar Rol</button>
+                </div>
+                <!--end::Card footer-->
             </div>
-            <!--end::Card body-->
-            <!--begin::Card footer-->
-            <div class="card-footer flex-wrap pt-0">
-                <a href="../../demo1/dist/apps/user-management/roles/view.html" class="btn btn-light btn-active-primary my-1 me-2">Ver Rol</a>
-                <button type="button" class="btn btn-light btn-active-light-primary my-1" data-bs-toggle="modal" data-bs-target="#kt_modal_update_role">Editar Rol</button>
-            </div>
-            <!--end::Card footer-->
+            <!--end::Card-->
         </div>
-        <!--end::Card-->
-    </div>
+    </ng-container>
 
     <!--begin::Add new card-->
     <div class="ol-md-4">
