Role:delete_edit_add

--- a/mercados/admin/src/app/modules/role/components/role-edit/role-edit.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-edit/role-edit.component.html
@@ -1,3 +1,4 @@
+<span *ngIf="isLoading | async" class="spinner-border spinner-border-sm align-middle ms-2"></span>
 <div class="modal-body mx-5 my-7">
     <!--begin::Form-->
     <form id="kt_modal_update_role_form" class="form fv-plugins-bootstrap5 fv-plugins-framework" action="#">
@@ -11,7 +12,7 @@
                 </label>
                 <!--end::Label-->
                 <!--begin::Input-->
-                <input class="form-control form-control-solid" placeholder="Enter a role name" name="role_name" value="Developer">
+                <input class="form-control form-control-solid" placeholder="Enter a role name" name="name" [(ngModel)]="name">
                 <!--end::Input-->
             <div class="fv-plugins-message-container invalid-feedback"></div></div>
             <!--end::Input group-->
@@ -349,11 +350,11 @@
         <!--end::Scroll-->
         <!--begin::Actions-->
         <div class="text-center pt-15">
-            <button type="reset" class="btn btn-light me-3" data-kt-roles-modal-action="cancel">Discard</button>
-            <button type="submit" class="btn btn-primary" data-kt-roles-modal-action="submit">
-                <span class="indicator-label">Submit</span>
+            <button type="reset" class="btn btn-light me-3" (click)="modal.close()">Cerrar</button>
+            <button type="submit" class="btn btn-primary" (click)="save()">
+                <span class="indicator-label">Guardar Cambios</span>
                 <span class="indicator-progress">Please wait...
-                <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+                </span>
             </button>
         </div>
         <!--end::Actions-->
