--- a/mercados/admin/src/app/modules/role/components/role-add/role-add.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-add/role-add.component.html
@@ -52,19 +52,19 @@
                                         <div class="d-flex">
                                             <!--begin::Checkbox-->
                                             <label class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20">
-                                                <input class="form-check-input" type="checkbox" value="" name="user_management_read">
+                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_read">
                                                 <span class="form-check-label">Read</span>
                                             </label>
                                             <!--end::Checkbox-->
                                             <!--begin::Checkbox-->
                                             <label class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20">
-                                                <input class="form-check-input" type="checkbox" value="" name="user_management_write">
+                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_write">
                                                 <span class="form-check-label">Write</span>
                                             </label>
                                             <!--end::Checkbox-->
                                             <!--begin::Checkbox-->
                                             <label class="form-check form-check-sm form-check-custom form-check-solid">
-                                                <input class="form-check-input" type="checkbox" value="" name="user_management_create">
+                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_create">
                                                 <span class="form-check-label">Create</span>
                                             </label>
                                             <!--end::Checkbox-->
@@ -87,11 +87,9 @@
         <!--end::Scroll-->
         <!--begin::Actions-->
         <div class="text-center pt-15">
-            <button type="reset" class="btn btn-danger me-3" (click)="modal.close()">Descartar</button>
+            <button type="reset" class="btn btn-light me-3" (click)="modal.close()">Cerrar</button>
             <button type="submit" class="btn btn-primary" (click)="save()">
-                <span class="indicator-label">Crear</span>
-                <span class="indicator-progress">Please wait...
-                <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+                <span class="indicator-label">Guardar</span>
             </button>
         </div>
         <!--end::Actions-->
