--- a/mercados/admin/src/app/modules/user/components/user-edit/user-edit.component.html
+++ b/mercados/admin/src/app/modules/user/components/user-edit/user-edit.component.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="card-body pb-5">
                     <div class="row mb-5">
-                        <div class="col-md-4 col-lg-12 col-xxl-4">
+                        <div class="mb-4 mb-md-0 col-md-6 col-lg-4">
                             <label [ngClass]="{'active': isPersonaNatural == 1}" class="btn btn-outline btn-outline-dashed btn-outline-default d-flex text-start p-6" data-kt-button="true">
                                 <span class="form-check form-check-custom form-check-solid form-check-sm align-items-start mt-1">
                                     <input [checked]="isPersonaNatural == 1" (change)="updateState(1)" class="form-check-input" type="radio" name="usage" value="1">
@@ -180,7 +180,7 @@
                                 </span>
                             </label>
                         </div>
-                        <div class="col-md-4 col-lg-12 col-xxl-4">
+                        <div class="col-md-6 col-lg-4">
                             <label [ngClass]="{'active': isPersonaNatural == 2}" class="btn btn-outline btn-outline-dashed btn-outline-default d-flex text-start p-6" data-kt-button="true">
                                 <span class="form-check form-check-custom form-check-solid form-check-sm align-items-start mt-1">
                                     <input [checked]="isPersonaNatural == 2" (change)="updateState(2)" class="form-check-input" type="radio" name="usage" value="1">
