--- a/mercados/admin/src/app/modules/role/components/role-view/role-view.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-view/role-view.component.html
@@ -30,7 +30,7 @@
                                                 class="bullet bg-{{
                                                 PERMISO.state === 1 ? 'primary' : 'danger'
                                                 }} me-3"
-                                            ></span>{{ PERMISOS.name }}
+                                            ></span>{{ PERMISO.name }}
                                         </div>
                                     </ng-container>
                           
@@ -95,25 +95,6 @@
                                     <input type="text" data-kt-roles-table-filter="search" class="form-control form-control-solid w-250px ps-15" placeholder="Buscar usuarios">
                                 </div>
                                 <!--end::Search-->
-                                <!--begin::Group actions-->
-                                <div class="d-flex justify-content-end align-items-center d-none" data-kt-view-roles-table-toolbar="selected">
-                                    <div class="fw-bolder me-5">
-                                        <span class="me-2" data-kt-view-roles-table-select="selected_count">
-                                            <font style="vertical-align: inherit;">
-                                                <font style="vertical-align: inherit;">1</font>
-                                            </font>
-                                        </span>
-                                        <font style="vertical-align: inherit;">
-                                            <font style="vertical-align: inherit;"> seleccionado</font>
-                                        </font>
-                                    </div>
-                                    <button type="button" class="btn btn-danger" data-kt-view-roles-table-select="delete_selected">
-                                        <font style="vertical-align: inherit;">
-                                            <font style="vertical-align: inherit;">Eliminar seleccionado</font>
-                                        </font>
-                                    </button>
-                                </div>
-                                <!--end::Group actions-->
                             </div>
                             <!--end::Card toolbar-->
                         </div>
@@ -128,14 +109,14 @@
                                         <thead>
                                             <!--begin::Table row-->
                                             <tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
-                                                <th class="w-10px pe-2 sorting_disabled" rowspan="1" colspan="1" aria-label="" style="width: 29.25px;">
-                                                    <div class="form-check form-check-sm form-check-custom form-check-solid me-3">
-                                                        <input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_roles_view_table .form-check-input" value="1">
-                                                    </div>
+                                                <th>
+                                                    <font style="vertical-align: inherit;">
+                                                        <font style="vertical-align: inherit;">N°</font>
+                                                    </font>
                                                 </th>
                                                 <th class="min-w-50px sorting" tabindex="0" aria-controls="kt_roles_view_table" rowspan="1" colspan="1" aria-label="ID: activar para ordenar la columna de forma ascendente" style="width: 80.375px;">
                                                     <font style="vertical-align: inherit;">
-                                                        <font style="vertical-align: inherit;">IDENTIFICACIÓN</font>
+                                                        <font style="vertical-align: inherit;">DNI</font>
                                                     </font>
                                                 </th>
                                                 <th class="min-w-150px sorting" tabindex="0" aria-controls="kt_roles_view_table" rowspan="1" colspan="1" aria-label="Usuario: activar para ordenar la columna de forma ascendente" style="width: 299.112px;">
@@ -159,94 +140,77 @@
                                         <!--end::Table head-->
                                         <!--begin::Table body-->
                                         <tbody class="fw-bold text-gray-600">
-                                            <tr class="odd">
-                                                <!--begin::Checkbox-->
-                                                <td>
-                                                    <div class="form-check form-check-sm form-check-custom form-check-solid">
-                                                        <input class="form-check-input" type="checkbox" value="1">
-                                                    </div>
-                                                </td>
-                                                <!--end::Checkbox-->
-                                                <!--begin::ID-->
-                                                <td>
-                                                    <font style="vertical-align: inherit;">
-                                                        <font style="vertical-align: inherit;">12345678</font>
-                                                    </font>
-                                                </td>
-                                                <!--begin::ID-->
-                                                <!--begin::User=-->
-                                                <td class="d-flex align-items-center">
-                                                    <!--begin:: Avatar -->
-                                                    <div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-                                                        <a href="../../demo1/dist/apps/user-management/users/view.html">
-                                                            <div class="symbol-label">
-                                                                <img src="assets/media/avatars/300-6.jpg" alt="Emma Smith" class="w-100">
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                    <!--end::Avatar-->
-                                                    <!--begin::User details-->
-                                                    <div class="d-flex flex-column">
-                                                        <a href="../../demo1/dist/apps/user-management/users/view.html" class="text-gray-800 text-hover-primary mb-1">
-                                                            <font style="vertical-align: inherit;">
-                                                                <font style="vertical-align: inherit;">Emma Smith</font>
-                                                            </font>
-                                                        </a>
-                                                        <span>
-                                                            <font style="vertical-align: inherit;">
-                                                                <font style="vertical-align: inherit;">smith@kpmg.com</font>
-                                                            </font>
-                                                        </span>
-                                                    </div>
-                                                    <!--begin::User details-->
-                                                </td>
-                                                <!--end::user=-->
-                                                <!--begin::Joined date=-->
-                                                <td data-order="2022-06-20T06:43:00-05:00">
-                                                    <font style="vertical-align: inherit;">
-                                                        <font style="vertical-align: inherit;">20 de junio de 2022, 6:43 am</font>
-                                                    </font>
-                                                </td>
-                                                <!--end::Joined date=-->
-                                                <!--begin::Action=-->
-                                                <td class="text-end">
-                                                    <a href="#" class="btn btn-sm btn-light btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+                                            <ng-container  *ngFor = "let USUARIO of USUARIOS; let i=index" > 
+                                                <tr class="odd">
+                                                    <td>
                                                         <font style="vertical-align: inherit;">
-                                                            <font style="vertical-align: inherit;">Acción</font>
+                                                            <font style="vertical-align: inherit;">{{i+1}}</font>
                                                         </font>
-                                                        <!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
-                                                        <span class="svg-icon svg-icon-5 m-0">
-                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                                                <path d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z" fill="currentColor"></path>
-                                                            </svg>
-                                                        </span>
-                                                    <!--end::Svg Icon-->
-                                                    </a>
-                                                    <!--begin::Menu-->
-                                                    <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
-                                                        <!--begin::Menu item-->
-                                                        <div class="menu-item px-3">
-                                                            <a href="../../demo1/dist/apps/user-management/users/view.html" class="menu-link px-3">
-                                                                <font style="vertical-align: inherit;">
-                                                                    <font style="vertical-align: inherit;">Vista</font>
-                                                                </font>
+                                                    </td>
+                                                    <!--begin::ID-->
+                                                    <td>
+                                                        <font style="vertical-align: inherit;">
+                                                            <font style="vertical-align: inherit;">{{USUARIO.dni}}</font>
+                                                        </font>
+                                                    </td>
+                                                    <!--begin::ID-->
+                                                    <!--begin::User=-->
+                                                    <td class="d-flex align-items-center">
+                                                        <!--begin:: Avatar -->
+                                                        <div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
+                                                            <a href="../../demo1/dist/apps/user-management/users/view.html">
+                                                                <div class="symbol-label">
+                                                                    <img src="assets/media/avatars/300-6.jpg" alt="Emma Smith" class="w-100">
+                                                                </div>
                                                             </a>
                                                         </div>
-                                                        <!--end::Menu item-->
-                                                        <!--begin::Menu item-->
-                                                        <div class="menu-item px-3">
-                                                            <a href="#" class="menu-link px-3" data-kt-roles-table-filter="delete_row">
+                                                        <!--end::Avatar-->
+                                                        <!--begin::User details-->
+                                                        <div class="d-flex flex-column">
+                                                            <a href="../../demo1/dist/apps/user-management/users/view.html" class="text-gray-800 text-hover-primary mb-1">
                                                                 <font style="vertical-align: inherit;">
-                                                                    <font style="vertical-align: inherit;">Borrar</font>
+                                                                    <font style="vertical-align: inherit;">{{USUARIO.name}}</font>
                                                                 </font>
                                                             </a>
+                                                            <span>
+                                                                <font style="vertical-align: inherit;">
+                                                                    <font style="vertical-align: inherit;">{{USUARIO.email}}</font>
+                                                                </font>
+                                                            </span>
                                                         </div>
-                                                        <!--end::Menu item-->
-                                                    </div>
-                                                    <!--end::Menu-->
-                                                </td>
-                                                <!--end::Action=-->
-                                            </tr>
+                                                        <!--begin::User details-->
+                                                    </td>
+                                                    <!--end::user=-->
+                                                    <!--begin::Joined date=-->
+                                                    <td data-order="2022-06-20T06:43:00-05:00">
+                                                        <font style="vertical-align: inherit;">
+                                                            <font style="vertical-align: inherit;">20 de junio de 2022, 6:43 am</font>
+                                                        </font>
+                                                    </td>
+                                                    <!--end::Joined date=-->
+                                                    <!--begin::Action=-->
+                                                    <td class="text-end">
+                                                        <a
+                                                            class="btn btn-icon btn-active-light-primary w-30px h-30px me-3"
+                                                            href="#"
+                                                        >
+                                                            <i class="ki-duotone ki-eye fs-3"
+                                                            ><span class="path1"></span><span class="path2"></span
+                                                            ><span class="path3"></span><span class="path4"></span></i>
+                                                        </a>
+                                                        <button
+                                                            class="btn btn-icon btn-active-light-danger w-30px h-30px"
+                                                        >
+                                                            <i class="ki-duotone ki-trash fs-3">
+                                                            <span class="path1"></span><span class="path2"></span>
+                                                            <span class="path3"></span><span class="path4"></span
+                                                            ><span class="path5"></span>
+                                                            </i>
+                                                        </button>
+                                                    </td>
+                                                    <!--end::Action=-->
+                                                </tr>
+                                            </ng-container>
                                        </tbody>
                                         <!--end::Table body-->  
                                     </table>
