--- a/mercados/admin/src/app/modules/role/components/role-edit/role-edit.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-edit/role-edit.component.html
@@ -22,7 +22,7 @@
       data-kt-scroll-offset="300px"
       style="max-height: 395px"
     >
-      <div class="fv-row mb-10 fv-plugins-icon-container">
+      <div class="fv-row mb-5 fv-plugins-icon-container">
         <label class="fs-5 fw-bolder form-label mb-2">
           <span class="required">Editar Rol</span>
         </label>
@@ -33,6 +33,31 @@
           [(ngModel)]="name"
         />
         <div class="fv-plugins-message-container invalid-feedback"></div>
+      </div>
+      <div class="fv-row mb-5 fv-plugins-icon-container">
+        <textarea
+          class="form-control form-control-solid"
+          [(ngModel)]="description"
+          placeholder="Enter a role description"
+          name="description"
+        ></textarea>
+        <div class="fv-plugins-message-container invalid-feedback"></div>
+      </div>
+      <div class="fv-row mb-8">
+        <label class="required fw-semibold fs-6 mb-2">Estado</label>
+        <div class="d-flex">
+          <div
+            class="form-check form-switch form-check-custom form-check-solid me-10"
+          >
+            <input [checked]="newState == 1" (click)="changeState(newState)" class="form-check-input" type="checkbox" value="" />
+            <label *ngIf="newState == 1" class="form-check-label text-success"
+              >Habilitado</label
+            >
+            <label *ngIf="newState == 2" class="form-check-label text-danger"
+              >Desabilitado</label
+            >
+          </div>
+        </div>
       </div>
       <div class="fv-row">
         <label class="fs-5 fw-bolder form-label mb-2">Permisos de rol</label>
