--- a/mercados/admin/src/app/modules/role/components/role-add/role-add.component.html
+++ b/mercados/admin/src/app/modules/role/components/role-add/role-add.component.html
@@ -1,98 +1,171 @@
 <div class="modal-body mx-lg-5 my-7">
-    <!--begin::Form-->
-    <form id="kt_modal_add_role_form" class="form fv-plugins-bootstrap5 fv-plugins-framework" action="#">
-        <!--begin::Scroll-->
-        <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_role_scroll" data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}" data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_role_header" data-kt-scroll-wrappers="#kt_modal_add_role_scroll" data-kt-scroll-offset="300px" style="max-height: 395px;">
-            <!--begin::Input group-->
-            <div class="fv-row mb-10 fv-plugins-icon-container">
-                <!--begin::Label-->
-                <label class="fs-5 fw-bolder form-label mb-2">
-                    <span class="required">Agregar Nuevo Rol</span>
-                </label>
-                <!--end::Label-->
-                <!--begin::Input-->
-                <input class="form-control form-control-solid" placeholder="Enter a role name" name="name" [(ngModel)]="name">
-                <!--end::Input-->
-            <div class="fv-plugins-message-container invalid-feedback"></div></div>
-            <!--end::Input group-->
-            <!--begin::Permissions-->
-            <div class="fv-row">
-                <!--begin::Label-->
-                <label class="fs-5 fw-bolder form-label mb-2">Role Permissions</label>
-                <!--end::Label-->
-                <!--begin::Table wrapper-->
-                <div class="table-responsive">
-                    <!--begin::Table-->
-                    <table class="table align-middle table-row-dashed fs-6 gy-5">
-                        <!--begin::Table body-->
-                        <tbody class="text-gray-600 fw-bold">
-                            <!--begin::Table row-->
-                            <tr>
-                                <td class="text-gray-800">Administrator Access
-                                <i class="fas fa-exclamation-circle ms-1 fs-7" data-bs-toggle="tooltip" title="" data-bs-original-title="Allows a full access to the system" aria-label="Allows a full access to the system"></i></td>
-                                <td>
-                                    <!--begin::Checkbox-->
-                                    <label class="form-check form-check-custom form-check-solid me-9">
-                                        <input class="form-check-input" type="checkbox" value="" id="kt_roles_select_all">
-                                        <span class="form-check-label" for="kt_roles_select_all">Select all</span>
-                                    </label>
-                                    <!--end::Checkbox-->
-                                </td>
-                            </tr>
-                            <!--end::Table row-->
-                            <!--begin::Table row-->
-                            <ng-container  *ngFor="let PERMISO of PERMISOS;">
-                                <tr>
-                                    <!--begin::Label-->
-                                    <td class="text-gray-800">{{PERMISO.name}}</td>
-                                    <!--end::Label-->
-                                    <!--begin::Options-->
-                                    <td>
-                                        <!--begin::Wrapper-->
-                                        <div class="d-flex">
-                                            <!--begin::Checkbox-->
-                                            <label class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20">
-                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_read">
-                                                <span class="form-check-label">Read</span>
-                                            </label>
-                                            <!--end::Checkbox-->
-                                            <!--begin::Checkbox-->
-                                            <label class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20">
-                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_write">
-                                                <span class="form-check-label">Write</span>
-                                            </label>
-                                            <!--end::Checkbox-->
-                                            <!--begin::Checkbox-->
-                                            <label class="form-check form-check-sm form-check-custom form-check-solid">
-                                                <input [disabled]="PERMISO.state == 2" class="form-check-input" type="checkbox" value="" name="user_management_create">
-                                                <span class="form-check-label">Create</span>
-                                            </label>
-                                            <!--end::Checkbox-->
-                                        </div>
-                                        <!--end::Wrapper-->
-                                    </td>
-                                    <!--end::Options-->
-                                </tr>
-                            </ng-container>
-                            <!--end::Table row-->
-                        </tbody>
-                        <!--end::Table body-->
-                    </table>
-                    <!--end::Table-->
-                </div>
-                <!--end::Table wrapper-->
-            </div>
-            <!--end::Permissions-->
+  <!--begin::Form-->
+  <form
+    id="form_create_role"
+    class="form fv-plugins-bootstrap5 fv-plugins-framework"
+    action="#"
+  >
+    <!--begin::Scroll-->
+    <div
+      class="d-flex flex-column scroll-y me-n7 pe-7"
+      id="kt_modal_add_role_scroll"
+      data-kt-scroll="true"
+      data-kt-scroll-activate="{default: false, lg: true}"
+      data-kt-scroll-max-height="auto"
+      data-kt-scroll-dependencies="#kt_modal_add_role_header"
+      data-kt-scroll-wrappers="#kt_modal_add_role_scroll"
+      data-kt-scroll-offset="300px"
+      style="max-height: 395px"
+    >
+      <!--begin::Input group-->
+      <div class="fv-row mb-5 fv-plugins-icon-container">
+        <!--begin::Label-->
+        <label class="fs-5 fw-bolder form-label mb-2">
+          <span class="required">Agregar Nuevo Rol</span>
+        </label>
+        <input
+          class="form-control form-control-solid"
+          [(ngModel)]="name"
+          placeholder="Enter a role name"
+          name="name"
+        />
+        <div class="fv-plugins-message-container invalid-feedback"></div>
+      </div>
+      <div class="fv-row mb-10 fv-plugins-icon-container">
+        <textarea
+          class="form-control form-control-solid"
+          [(ngModel)]="description"
+          placeholder="Enter a role description"
+          name="description"
+          cols="5"
+        ></textarea>
+        <!--end::Input-->
+        <div class="fv-plugins-message-container invalid-feedback"></div>
+      </div>
+      <!--end::Input group-->
+      <!--begin::Permissions-->
+      <div class="fv-row">
+        <!--begin::Label-->
+        <label class="fs-5 fw-bolder form-label mb-2">Role Permissions</label>
+        <!--end::Label-->
+        <!--begin::Table wrapper-->
+        <div class="table-responsive">
+          <!--begin::Table-->
+          <table class="table align-middle table-row-dashed fs-6 gy-5">
+            <!--begin::Table body-->
+            <tbody class="text-gray-600 fw-bold">
+              <!--begin::Table row-->
+              <tr>
+                <td class="text-gray-800">
+                  Administrator Access
+                  <i
+                    class="fas fa-exclamation-circle ms-1 fs-7"
+                    data-bs-toggle="tooltip"
+                    title=""
+                    data-bs-original-title="Allows a full access to the system"
+                    aria-label="Allows a full access to the system"
+                  ></i>
+                </td>
+                <td>
+                  <!--begin::Checkbox-->
+                  <label
+                    class="form-check form-check-custom form-check-solid me-9"
+                  >
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="kt_roles_select_all"
+                      (change)="selectAll($event)"
+                    />
+                    <span class="form-check-label" for="kt_roles_select_all"
+                      >Select all</span
+                    >
+                  </label>
+                  <!--end::Checkbox-->
+                </td>
+              </tr>
+              <!--end::Table row-->
+              <!--begin::Table row-->
+              <ng-container *ngFor="let PERMISO of PERMISOS">
+                <tr>
+                  <!--begin::Label-->
+                  <td class="text-gray-800">{{ PERMISO.name }}</td>
+                  <!--end::Label-->
+                  <!--begin::Options-->
+                  <td>
+                    <!--begin::Wrapper-->
+                    <div class="d-flex">
+                      <!--begin::Checkbox-->
+                      <label
+                        class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20"
+                      >
+                        <input
+                          [disabled]="PERMISO.state == 2"
+                          class="form-check-input permiso_check"
+                          type="checkbox"
+                          value="{{ PERMISO.id + '_1' }}"
+                          name="{{ 'permiso_' + PERMISO.id + '_1_view' }}"
+                        />
+                        <span class="form-check-label">Leer</span>
+                      </label>
+                      <!--end::Checkbox-->
+                      <!--begin::Checkbox-->
+                      <label
+                        class="form-check form-check-sm form-check-custom form-check-solid me-5 me-lg-20"
+                      >
+                        <input
+                          [disabled]="PERMISO.state == 2"
+                          class="form-check-input permiso_check"
+                          type="checkbox"
+                          value="{{ PERMISO.id + '_2' }}"
+                          name="{{ 'permiso_' + PERMISO.id + '_2_write' }}"
+                        />
+                        <span class="form-check-label">Write</span>
+                      </label>
+                      <!--end::Checkbox-->
+                      <!--begin::Checkbox-->
+                      <label
+                        class="form-check form-check-sm form-check-custom form-check-solid"
+                      >
+                        <input
+                          [disabled]="PERMISO.state == 2"
+                          class="form-check-input permiso_check"
+                          type="checkbox"
+                          value="{{ PERMISO.id + '_3' }}"
+                          name="{{ 'permiso_' + PERMISO.id + '_3_create' }}"
+                        />
+                        <span class="form-check-label">Create</span>
+                      </label>
+                      <!--end::Checkbox-->
+                    </div>
+                    <!--end::Wrapper-->
+                  </td>
+                  <!--end::Options-->
+                </tr>
+              </ng-container>
+              <!--end::Table row-->
+            </tbody>
+            <!--end::Table body-->
+          </table>
+          <!--end::Table-->
         </div>
-        <!--end::Scroll-->
-        <!--begin::Actions-->
-        <div class="text-center pt-15">
-            <button type="reset" class="btn btn-light me-3" (click)="modal.close()">Cerrar</button>
-            <button type="submit" class="btn btn-primary" (click)="save()">
-                <span class="indicator-label">Guardar</span>
-            </button>
-        </div>
-        <!--end::Actions-->
-    <div></div></form>
-    <!--end::Form-->
+        <!--end::Table wrapper-->
+      </div>
+      <!--end::Permissions-->
+    </div>
+    <!--end::Scroll-->
+    <!--begin::Actions-->
+    <div class="text-center pt-15">
+      <button type="reset" class="btn btn-light me-3" (click)="modal.close()">
+        Cerrar
+      </button>
+      <button type="submit" class="btn btn-primary">
+        <span class="indicator-label">Guardar</span>
+      </button>
+    </div>
+    <!--end::Actions-->
+    <div></div>
+  </form>
+  <!--end::Form-->
 </div>
